# terraform-hpc

./: .gitignore  README.md  TEST_PLAN.md  destroy.sh  main.tf  non-prod.tfvars.example  outputs.tf  providers.tf  terraform.tfstate.1774022656.backup  terraform.tfvars.example  variables.tf  versions.tf
docs/: user-guide.md
examples/evo2-inference-container/: Dockerfile  README.md  inference.py
examples/snakemake-demo/: README.md  Snakefile
jobs/: fsx_smoke_test.sh  fsx_test_job.sh  inference_job.sh.tpl  job.sh  s3_pipeline_job.sh
jobui/: README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
jobui/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
jobui/backend/alembic/: env.py
jobui/backend/alembic/versions/: 0001_initial.py
jobui/backend/app/: auth.py  cache.py  config.py  costing.py  database.py  main.py  models.py  s3_uploads.py  schemas.py  slurm.py
jobui/backend/app/auth/: dependencies.py  jwt_handler.py
jobui/backend/app/models/: schemas.py
jobui/backend/app/routers/: auth.py  files.py  gpus.py  jobs.py  models.py  uploads.py  users.py
jobui/backend/app/scripts/: bootstrap.py  monthly_rollup.py
jobui/backend/app/services/: job_service.py  s3_service.py  slurm_service.py
jobui/backend/app/utils/: logging.py
jobui/frontend/: Dockerfile  index.html  nginx-spa.conf  package.json  tailwind.config.js  vite.config.js
jobui/nginx/: nginx.conf
local-ui/: README.md  nginx-local.conf  podman-compose.yml
modules/alb/: main.tf
scripts/: build-and-push-jobui.sh  destroy.sh  stage-model-weights.sh
(+64 files in other folders)
