[project]
name = "titan-hpc-jobui"
version = "0.1.0"
description = "Titan HPC jobui backend — FastAPI + SQLAlchemy + boto3"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.34",
    "pymysql==1.1.1",
    "cryptography==43.0.1",
    "alembic==1.13.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "boto3==1.35.14",
    "valkey==6.0.2",
    "httpx==0.27.2",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]
